* Don't use auto-zoom feature when the window was positioned using the Aero Snap
! The dockable bars were not updated when changing the UI language
! Statusbar: Fixed occasional flickering of text and media type icon
! D3D Fullscreen last state was inverted and wasn't properly restored with "Remember last window size and position" option
! Ticket #34, VSFilter/ISR: Override placement feature was not working even if enabled
! Ticket #1411, Internal Subtitle Renderer/VSFilter: Support loading external PGS subtitles
! Ticket #1574/#4171, ISR: Subtitle positioning was wrong when using default style override
! Ticket #2244, ISR: Changes in subresync bar were lost after changing style
! Ticket #2671, VSFilter: Video frames were not marked as interlaced
! Ticket #3701, Subtitle outline was too thick when using default style override
! Ticket #4284, Auto-zoom feature didn't work properly when the taskbar was docked at the left or the top of the screen
! Ticket #4288, Changing the zoom level when in fullscreen mode did nothing
! Ticket #4298, The auto-change fullscreen mode monitor settings could be randomly corrupted or missing
! Ticket #4299, Frame stepping was not working for DVD
! Ticket #4307, ANSI subtitles files with Unix line endings could crash MPC-HC


1.7.5 - 01 May 2014
===================
* Updated Catalan, Croatian, Dutch, German, Japanese, Slovenian, Spanish, Ukrainian and Vietnamese translations
! Ticket #3691, PGS subtitles: Some lines stayed visible for too long when using the queue
! Ticket #4231, Don't prevent the users from using the ISR if they choose not to block VSFilter like filters
! Ticket #4240, Crashes could randomly occur when playing files with PGS subtitles (mostly when seeking quickly)


1.7.4 - 16 April 2014
=====================
+ New Bengali and Tatar translations
+ Support for opening "icyx://" stream URLs
+ Ticket #2348/#3583, Automatically refresh the information bar and title bar so that the correct information